# tabx

./: .gitignore  README.md  pyproject.toml
tabx/cli/: __init__.py  app.py  split.py  train.py
tabx/tablenet/: criterion.py  logging.py  spec.py
tabx/tablenet/data/: __init__.py  dataset.py  dataset_splitter.py  marmot_dataset.py  transforms.py
tabx/tablenet/models/: __init__.py  column_decoder.py  mask.py  table_decoder.py  table_net.py
tabx/tablenet/train/: __init__.py  config.py  trainer.py
