[tool.poetry]
name = "tabx"
version = "0.1.0"
description = ""
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchvision = "^0.17.0"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
